--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -12,21 +12,16 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: |
-          make install
+        run: make install
 
       - name: Lint with pyLint
-        run: |
-          make lint
+        run: make lint
 
       - name: Test with pytest
-        run: |
-          make test
+        run: make test
 
       - name: Format code
-        run: |
-          make format
+        run: make format
 
       - name: Build container
-        run: |
-          make build
+        run: make build
