--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.9"
 
       - name: Install dependencies
         run: make install
@@ -23,5 +23,10 @@ jobs:
       - name: Format code
         run: make format
 
-      - name: Build container
-        run: make build
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build and Push Docker Image
+        run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis .
+        docker push ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis
